@@ -1,4 +1,3 @@
-
 ! +++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 ! +                                                           +
 ! +  glimmer_interp.f90 - part of the GLIMMER ice model       + 
@@ -489,16 +488,26 @@ contains
     type(downscale),intent(in) :: downs  !*FD The downscaling parameters to be written
     integer,        intent(in) :: unit   !*FD The logical file unit to use
 
+    ! temporary variable, this is need to fix an internal compiler error of the SUN WS f95 compiler.
+    logical :: temp
+
     ! Beginning of code
     
-    write(unit) associated(downs%il)
-    if (associated(downs%il))  write(unit) downs%il
-    write(unit) associated(downs%ilp)
-    if (associated(downs%ilp)) write(unit) downs%ilp
-    write(unit) associated(downs%jl)
-    if (associated(downs%jl))  write(unit) downs%jl
-    write(unit) associated(downs%il)
-    if (associated(downs%jlp)) write(unit) downs%jlp
+    temp = associated(downs%il)
+    write(unit) temp
+    if (temp)  write(unit) downs%il
+
+    temp = associated(downs%ilp)
+    write(unit) temp
+    if (temp)  write(unit) downs%il
+
+    temp = associated(downs%jl)
+    write(unit) temp
+    if (temp)  write(unit) downs%il
+
+    temp = associated(downs%jlp)
+    write(unit) temp
+    if (temp)  write(unit) downs%il
 
   end subroutine downs_write_restart
 
